// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nested schema parses 1`] = `
Object {
  "name": undefined,
  "otherStudents": Array [],
  "students": Array [],
  "teacher": undefined,
}
`;

exports[`nested schema rejects validation 1`] = `
Array [
  Object {
    "message": "name is required",
    "param": "name",
    "required": true,
    "validator": "required",
    "value": undefined,
  },
  Object {
    "message": "teacher is required",
    "param": "teacher",
    "required": true,
    "validator": "required",
    "value": undefined,
  },
]
`;

exports[`nested schema resolves validation 1`] = `
Object {
  "name": "Computer Science",
  "otherStudents": Array [],
  "students": Array [],
  "teacher": Object {
    "name": "Grace",
  },
}
`;

exports[`validate 1`] = `
Array [
  Object {
    "message": "foo is required",
    "param": "foo",
    "required": true,
    "validator": "required",
    "value": undefined,
  },
]
`;
